--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ html {
 /* Page Layout */
 
 .hero-div {
-  background-color: peru;
+  background: url('./imgs/hero.jpg');
+  background-position: 50% 100%;
   width: 100vw;
   height: 538px;
 }
