--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ html {
 .hero-div {
   background: url('./imgs/hero.jpg');
   background-position: 50% 100%;
+  background-size: 100% auto;
   width: 100vw;
   height: 538px;
 }
