--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ h2,
 h3 {
   text-align: center;
   white-space: nowrap;
+  color: white;
 }
 
 h1 {
@@ -212,9 +213,11 @@ h3 {
 }
 
 .nav li {
-  text-align: center;
-  vertical-align: center;
-  margin: auto;
+  color: white;
+  border: 1px solid gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Products flex */
