--- a/style.css
+++ b/style.css
@@ -235,6 +235,18 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+  line-height: 36px;
+  width: 100%;
+  border-right: 1px solid rgb(84, 84, 84);
+}
+
+.nav-item a {
+  display: block;
+  height: 36px;
+  border-right: 1px solid rgba(255, 255, 255, 0.15);
+  border-left: 1px solid rgba(255, 255, 255, 0.15);
+  width: 100%;
+  text-align: center;
 }
 
 /* Products flex */
