--- a/style.css
+++ b/style.css
@@ -230,7 +230,6 @@ h3 {
 }
 
 .nav li {
-  color: white;
   /* border: 1px solid gray; */
   display: flex;
   align-items: center;
@@ -247,6 +246,8 @@ h3 {
   border-left: 1px solid rgba(255, 255, 255, 0.15);
   width: 100%;
   text-align: center;
+  color: white;
+  text-decoration: none;
 }
 
 /* Products flex */
